--- a/app/src/Map.scss
+++ b/app/src/Map.scss
@@ -1,3 +1,5 @@
+@import 'css/_colors.scss';
+
 #map-container {
     position: absolute;
     top: 15px;
@@ -45,7 +47,7 @@
 #zoom-in, #zoom-out, #pan-center {
     background: rgba(50, 51, 43, 0.75);
     transition: background 0.25s;
-    color: #fff;
+    color: $primaryText;
     position: absolute;
     width: 24px;
     height: 24px;
@@ -80,7 +82,7 @@
     left: 50px;
     width: 100px;
     background: rgba(50, 51, 43, 0.75);
-    color: #fff;
+    color: $primaryText;
     padding: 3px 5px 4px 5px;
     border-radius: 4px;
     font-size: 14px;
@@ -108,8 +110,6 @@
     z-index: 5000;
     max-height: 0;
     overflow: hidden;
-    -webkit-transition: max-height 0.8s;
-    -moz-transition: max-height 0.8s;
     transition: max-height 0.8s;
 }
 
@@ -130,7 +130,7 @@
 #type-selection a, #type-selection a:link {
     display: block;
     padding: 5px;
-    color: #fff;
+    color: $primaryText;
     cursor: pointer;
     transition: background 0.25s;
 }
