--- a/app/src/Panel.scss
+++ b/app/src/Panel.scss
@@ -1,4 +1,6 @@
-#info-container {
+@import 'css/_variables.scss';
+
+#panel {
     position: absolute;
     right: 0;
     left: 75%;
@@ -6,31 +8,31 @@
     padding: 15px 20px 20px 20px;
 }
 
-@media(max-width: 1400px) {
-    #info-container { left: 70%; }
+@media(max-width: $width-xl) {
+    #panel { left: 100% - $panel-width-xl; }
 }
 
-@media(max-width: 1150px) {
-    #info-container { left: 65%; }
+@media(max-width: $width-l) {
+    #panel { left: 100% - $panel-width-l; }
 }
 
-@media(max-width: 1000px) {
-    #info-container { left: 60%; }
+@media(max-width: $width-m) {
+    #panel { left: 100% - $panel-width-m; }
 }
 
-@media(max-width: 900px) {
-    #info-container { left: 55%; }
+@media(max-width: $width-s) {
+    #panel { left: 100% - $panel-width-s; }
 }
 
-@media(max-width: 800px) {
-    #info-container {
+@media(max-width: $width-mobile) {
+    #panel {
         position: static;
         padding-top: 10px;
     }
 }
 
-@media(max-width: 360px) {
-    #info-container {
+@media(max-width: $width-tiny) {
+    #panel {
         padding: 15px;
     }
     #sunicon, #moonimggraphic {
@@ -39,8 +41,8 @@
     }
 }
 
-@media(min-width: 801px) {
-    #info-container {
+@media(min-width: $width-mobile + 1px) {
+    #panel {
         max-height: 100%;
         min-height: 100%;
         overflow-x: hidden;
