--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -1,4 +1,5 @@
 @import 'css/_colors.scss';
+@import 'css/_variables.scss';
 
 html {
     background: $panelGradient;
@@ -46,7 +47,7 @@ input, select {
     font-size: 100%;
 }
 
-@media(max-width: 800px) {
+@media(max-width: $width-mobile) {
     .slide-in {
         display: block !important;
         animation: slide-in 0.3s forwards;
@@ -71,7 +72,7 @@ input, select {
 
 }
 
-@media(min-width: 801px) {
+@media(min-width: $width-mobile + 1px) {
     .slide-in {
         display: block !important;
         animation: slide-in 0.3s forwards;
