--- a/app/src/css/_variables.scss
+++ b/app/src/css/_variables.scss
@@ -10,3 +10,8 @@ $panel-width-xl:  30%;
 $panel-width-l:   35%;
 $panel-width-m:   40%;
 $panel-width-s:   45%;
+
+$title-font:      'Roboto Slab', sans-serif;
+$body-font:       'Lato', sans-serif;
+$body-font-size:  14px;
+$title-font-size: $base-font-size + 11px;
