--- a/app/src/data/Data.scss
+++ b/app/src/data/Data.scss
@@ -1,7 +1,8 @@
 @import '../css/_colors.scss';
+@import '../css/_variables.scss';
 
 #data h1 {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: $title-font;
     font-weight: 400;
     font-size: 30px;
     margin: 0;
@@ -11,7 +12,7 @@
 }
 
 #data h2 {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: $title-font;
     font-weight: 400;
     font-size: 20px;
     margin: 0;
