Refactored welcome CSS to nested structure

--- a/app/src/css/_variables.scss
+++ b/app/src/css/_variables.scss
@@ -14,4 +14,4 @@ $panel-width-s:   45%;
 $title-font:      'Roboto Slab', sans-serif;
 $body-font:       'Lato', sans-serif;
 $body-font-size:  14px;
-$title-font-size: $base-font-size + 11px;
+$title-font-size: $body-font-size + 11px;
