--- a/app/src/css/_colors.scss
+++ b/app/src/css/_colors.scss
@@ -1,7 +1,7 @@
-$primaryText:   #fff;
-$secondaryText: #a1a29e;
-$accentText:    #d4ffbc;
+$primary-text:   #fff;
+$secondary-text: #a1a29e;
+$accent-text:    #d4ffbc;
 
-$warningColor:  #ffd700;
+$warning-color:  #ffd700;
 
-$panelGradient: linear-gradient(#373830, #272822) no-repeat fixed;
+$panel-gradient: linear-gradient(#373830, #272822) no-repeat fixed;
