--- a/app/src/data/TimeZoneSelector.scss
+++ b/app/src/data/TimeZoneSelector.scss
@@ -1,84 +1,34 @@
 @import '../css/_colors.scss';
 @import '../css/_variables.scss';
+@import '../css/_common.scss';
 
-#tzselection {
-    background: $panelGradient;
-    z-index: 100000;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 15px 20px 20px 20px;
-    overflow-y: scroll;
-}
+#timezoneselector {
+    @extend .slide-in-panel;
 
-@media(max-width: $width-mobile) {
-    #tzselection {
-        position: fixed;
-        transform: translateY(100%);
-        max-height: 100%;
+    strong {
+        font-size: 120%;
+        display: block;
+        border-bottom: 1px solid #333;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
-}
 
-@media(min-width: $width-mobile + 1px) {
-    #tzselection {
-        position: absolute;
-        transform: translateX(100%);
-        max-height: 100%;
+    .zone-list {
+        a, a:link, a:visited {
+            display: block;
+            text-decoration: none;
+            color: $accent-text;
+            font-size: 110%;
+            padding: 3px;
+            border-radius: 4px;
+        }
+        a:hover {
+            background: #494a42;
+        }
+        a span {
+            color: #fff;
+            padding-right: 4px;
+        }
     }
-}
 
-#tzselection h1 {
-    font-family: $title-font;
-    font-weight: normal;
-    margin: 0;
-    padding: 0;
-    font-size: 25px;
-}
-
-#tzselection h2 {
-    font-family: $title-font;
-    font-weight: normal;
-    color: #fff !important;
-    margin: 10px 0 !important;
-    padding: 0;
-    font-size: 20px;
-}
-
-#tzselection h1 a {
-    color: #6d6e68;
-    float: right;
-    clear: none;
-}
-
-#tzselection h1 a:hover {
-    color: #ffd700;
-}
-
-#tzalllist a, #tzalllist a:link, #tzalllist a:visited,
-#tzmatchlist a, #tzmatchlist a:link, #tzmatchlist a:visited {
-    display: block;
-    text-decoration: none;
-    color: #d4ffbc;
-    font-size: 110%;
-    padding: 3px;
-    border-radius: 4px;
-}
-
-#tzalllist a:hover, #tzalllist a:active,
-#tzmatchlist a:hover, #tzmatchlist a:active {
-    background: #494a42;
-}
-
-#tzalllist a span, #tzmatchlist a span {
-    color: #fff;
-    padding-right: 4px;
-}
-
-#tzmatchcontainer strong {
-    font-size: 120%;
-    display: block;
-    border-bottom: 1px solid #333;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
