--- a/app/src/welcome/CitySelector.scss
+++ b/app/src/welcome/CitySelector.scss
@@ -1,106 +1,55 @@
 @import '../css/_colors.scss';
 @import '../css/_variables.scss';
+@import '../css/_common.scss';
 
-#cityselection {
-    background: $panelGradient;
-    z-index: 100000;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 15px 20px 20px 20px;
-    overflow-y: scroll;
-}
+#cityselector {
+    @extend .slide-in-panel;
 
-@media(max-width: $width-mobile) {
-    #cityselection {
-        position: fixed;
-        transform: translateY(100%);
-        max-height: 100%;
+    ol {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        a.country {
+            display: block;
+            text-decoration: none;
+            color: #dadad9;
+            font-size: 110%;
+            padding: 3px;
+            border-radius: 4px;
+
+            span.flag {
+                display: inline-block;
+                margin-right: 7px;
+                position: relative;
+                top: 2px;
+            }
+        }
+
+        a.country:hover, a.country:active {
+            background: #494a42;
+            color: #fff;
+        }
+
+        ol {
+            display: none;
+
+            a {
+                border-radius: 4px;
+                margin-left: 30px;
+                display: block;
+                padding: 3px;
+            }
+
+            a:hover, a:active {
+                background: #494a42;
+            }
+        }
+
+        li.active>ol {
+            display: block;
+        }
+
     }
-}
 
-@media(min-width: $width-mobile + 1px) {
-    #cityselection {
-        position: absolute;
-        transform: translateX(100%);
-        max-height: 100%;
-    }
-}
-
-#cityselection h1 {
-    font-family: $title-font;
-    font-weight: normal;
-    margin: 0;
-    padding: 0;
-    font-size: 25px;
-}
-
-#cityselection h2 {
-    font-family: $title-font;
-    font-weight: normal;
-    color: #fff !important;
-    margin: 10px 0 !important;
-    padding: 0;
-    font-size: 20px;
-}
-
-#cityselection h1 a {
-    color: #6d6e68;
-    float: right;
-    clear: none;
-}
-
-#cityselection h1 a:hover {
-    color: #ffd700;
-}
-
-#cityselection ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-#cityselection ol a.country {
-    display: block;
-    text-decoration: none;
-    color: #dadad9;
-    font-size: 110%;
-    padding: 3px;
-    border-radius: 4px;
-}
-
-#cityselection ol a.country span.flag {
-    display: inline-block;
-    margin-right: 7px;
-    position: relative;
-    top: 2px;
-}
-
-#cityselection ol a.country:hover, #cityselection ol a.country:active {
-    background: #494a42;
-    color: #fff;
-}
-
-.country, #citylistwrapper {
-    position: relative;
-}
-
-#cityselection ol ol {
-    display: none;
-}
-
-#cityselection ol li.active>ol {
-    display: block;
-}
-
-#cityselection ol ol a {
-    border-radius: 4px;
-    margin-left: 30px;
-    display: block;
-    padding: 3px;
-}
-
-#cityselection ol ol a:hover, #cityselection ol ol a:active {
-    background: #494a42;
 }
