--- a/app/src/css/_colors.scss
+++ b/app/src/css/_colors.scss
@@ -3,5 +3,6 @@ $secondary-text: #a1a29e;
 $accent-text:    #d4ffbc;
 
 $warning-color:  #ffd700;
+$divider-color:  #44453e;
 
 $panel-gradient: linear-gradient(#373830, #272822) no-repeat fixed;
