--- a/app/src/Map.scss
+++ b/app/src/Map.scss
@@ -5,32 +5,32 @@
     position: absolute;
     top: 15px;
     left: 15px;
-    right: 25%;
+    right: $panel-width-xxl;
     bottom: 15px;
-}
 
-@media(max-width: $width-xl) {
-    #map-container { right: $panel-width-xl; }
-}
+    @media(max-width: $width-xl) {
+        right: $panel-width-xl;
+    }
 
-@media(max-width: $width-l) {
-    #map-container { right: $panel-width-l; }
-}
+    @media(max-width: $width-l) {
+        right: $panel-width-l;
+    }
 
-@media(max-width: $width-m) {
-    #map-container { right: $panel-width-m; }
-}
+    @media(max-width: $width-m) {
+        right: $panel-width-m;
+    }
 
-@media(max-width: $width-s) {
-    #map-container { right: $panel-width-s; }
-}
+    @media(max-width: $width-s) {
+        right: $panel-width-s;
+    }
 
-@media(max-width: $width-mobile) {
-    #map-container {
+    @media(max-width: $width-mobile) {
         position: static;
         height: 45vh;
     }
+
 }
+
 
 #map {
     width: 100%;
@@ -43,99 +43,101 @@
     margin-top: 10px;
     margin-left: 10px;
     z-index: 50000;
+
+    #zoom-in, #zoom-out {
+        background: rgba(50, 51, 43, 0.75);
+        transition: background 0.25s;
+        color: $primary-text;
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+        text-align: center;
+
+        .fa {
+            position: relative;
+            top: 3px;
+        }
+
+        &:hover {
+            background: rgba(50, 51, 43, 1);
+        }
+    }
+
+    #zoom-out {
+        top: 0;
+        left: 0;
+        border-radius: 4px 0 0 4px;
+    }
+
+    #zoom-in {
+        top: 0;
+        left: 24px;
+        border-radius: 0 4px 4px 0;
+    }
+
+    #type-select {
+        position: absolute;
+        top: 0;
+        left: 50px;
+        width: 100px;
+        background: rgba(50, 51, 43, 0.75);
+        color: $primary-text;
+        padding: 3px 5px 4px 5px;
+        border-radius: 4px;
+        font-size: 14px;
+        cursor: pointer;
+        transition: background 0.25s;
+
+        .fa {
+            float: right;
+            position: relative;
+            top: 2px;
+        }
+
+        &:hover {
+            background: rgba(50, 51, 43, 1);
+        }
+    }
+
+
+    #type-selection {
+        position: absolute;
+        top: 26px;
+        left: 50px;
+        width: 110px;
+        background: rgba(50, 51, 43, 0.75);
+        border-radius: 4px;
+        z-index: 5000;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.8s;
+
+        &.active {
+            max-height: 1000px;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            li {
+                margin: 0;
+                padding: 0;
+                a {
+                    display: block;
+                    padding: 5px;
+                    color: $primary-text;
+                    cursor: pointer;
+                    transition: background 0.25s;
+                    &:hover {
+                        background: #32332B;
+                    }
+                }
+            }
+        }
+
+    }
+
 }
 
-#zoom-in, #zoom-out, #pan-center {
-    background: rgba(50, 51, 43, 0.75);
-    transition: background 0.25s;
-    color: $primary-text;
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    cursor: pointer;
-    text-align: center;
-}
-
-#zoom-in .fa, #zoom-out .fa {
-    position: relative;
-    top: 3px;
-}
-
-#zoom-in:hover, #zoom-out:hover {
-    background: rgba(50, 51, 43, 1);
-}
-
-#zoom-out {
-    top: 0;
-    left: 0;
-    border-radius: 4px 0 0 4px;
-}
-
-#zoom-in {
-    top: 0;
-    left: 24px;
-    border-radius: 0 4px 4px 0;
-}
-
-#type-select {
-    position: absolute;
-    top: 0;
-    left: 50px;
-    width: 100px;
-    background: rgba(50, 51, 43, 0.75);
-    color: $primary-text;
-    padding: 3px 5px 4px 5px;
-    border-radius: 4px;
-    font-size: 14px;
-    cursor: pointer;
-    transition: background 0.25s;
-}
-
-#type-select .fa {
-    float: right;
-    position: relative;
-    top: 2px;
-}
-
-#type-select:hover {
-    background: rgba(50, 51, 43, 1);
-}
-
-#type-selection {
-    position: absolute;
-    top: 26px;
-    left: 50px;
-    width: 110px;
-    background: rgba(50, 51, 43, 0.75);
-    border-radius: 4px;
-    z-index: 5000;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.8s;
-}
-
-#type-selection.active {
-    max-height: 1000px;
-}
-
-#type-selection ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-#type-selection li {
-    margin: 0;
-    padding: 0;
-}
-#type-selection a, #type-selection a:link {
-    display: block;
-    padding: 5px;
-    color: $primary-text;
-    cursor: pointer;
-    transition: background 0.25s;
-}
-
-#type-selection a:hover {
-    background: #32332B;
-}
