--- a/app/src/css/_variables.scss
+++ b/app/src/css/_variables.scss
@@ -6,6 +6,7 @@ $width-m:       1000px;
 $width-l:       1150px;
 $width-xl:      1400px;
 
+$panel-width-xxl: 25%;
 $panel-width-xl:  30%;
 $panel-width-l:   35%;
 $panel-width-m:   40%;
