--- a/app/src/data/Data.scss
+++ b/app/src/data/Data.scss
@@ -44,6 +44,13 @@
 #moonimggraphic {
     margin-bottom: 15px;
 }
+@media(max-width: $width-tiny) {
+    #sunicon, #moonimggraphic {
+        width: 80px !important;
+        height: 80px !important;
+    }
+}
+
 
 #sunrise, #sunset, #moonrise, #moonset, #moonphase {
     font-size: 18px;
