--- a/app/src/data/Data.scss
+++ b/app/src/data/Data.scss
@@ -1,178 +1,146 @@
 @import '../css/_colors.scss';
 @import '../css/_variables.scss';
 
-#data h1 {
-    font-family: $title-font;
-    font-weight: 400;
-    font-size: 30px;
-    margin: 0;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-#data h2 {
-    font-family: $title-font;
-    font-weight: 400;
-    font-size: 20px;
-    margin: 0;
-    color: $accent-text;
-}
-
-#sun, #moon, #zone {
-    margin-top: 7px;
-    padding-top: 7px;
-    border-top: 1px solid #44453e;
-}
-
-#moon {
-    margin-top: 0;
-}
-
-#sunicon, #moonimggraphic {
-    height: 100px;
-    width: 100px;
-    float: left;
-    margin-right: 15px;
-    margin-top: 2px;
-}
-
-#sunicon {
-    margin-bottom: 15px;
-}
-
-#moonimggraphic {
-    margin-bottom: 15px;
-}
-@media(max-width: $width-tiny) {
-    #sunicon, #moonimggraphic {
-        width: 80px !important;
-        height: 80px !important;
-    }
-}
-
-
-#sunrise, #sunset, #moonrise, #moonset, #moonphase {
-    font-size: 18px;
-    color: $accent-text;
-    margin-top: 5px;
-}
-
-#sunriselabel, #sunsetlabel, #moonriselabel, #moonsetlabel, #moonphaselabel {
-    display: block;
-    width: 65px;
-    padding-top: 7px;
-    float: left;
-}
-
-#moonphaselabel {
-    padding-top: 6px;
-}
-
-#sunrisevalue, #sunsetvalue, #moonrisevalue, #moonsetvalue {
-    font-size: 25px;
-    color: $primary-text;
-}
-
-#sunrisetz, #sunsettz, #moonrisetz, #moonsettz {
-    color: $secondary-text;
-}
-
-#moonphasevalue {
-    color: $primary-text;
-    font-size: 18px;
-    padding-top: 6px;
-    display: inline-block;
-}
-
-#moonimage {
-    margin-left: 45px;
-    margin-top: 5px;
-    float: left;
-}
-
-#sunspecial, #moonspecial {
-    padding-top: 23px;
-    font-size: 150%;
-}
-
-#data.loading #sunrisevalue, #data.loading #sunsetvalue, #data.loading #moonrisevalue, #data.loading #moonsetvalue,
-#data.loading #sunrisetz, #data.loading #sunsettz, #data.loading #moonrisetz, #data.loading #moonsettz, #data.loading #moonphasevalue,
-#data.loading #sunspecial, #data.loading #moonspecial, #data.loading #zone {
-    opacity: 0.3;
-}
-
-#tzwarning {
-    font-size: 16px;
-    color: $warning-color;
-    border: 2px solid $warning-color;
-    margin: 10px 0 10px 0;
-    padding: 6px 10px 8px;
-    border-radius: 6px;
-    text-align: center;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-#tzwarning:hover {
-    color: $primary-text;
-    border-color: $primary-text;
-}
-
-#tzwarning.active {
-    display: block;
-}
-
-#tzwarning a {
-    color: $warning-color;
-}
-
-#tzwarning a:hover {
-    color: #ffdc4f;
-}
-
 #loading {
     padding-top: 20px;
     font-size: 16px;
     color: $secondary-text;
     text-align: center;
+    .fa {
+        display: inline-block;
+        margin-bottom: 10px;
+        font-size: 25px;
+    }
 }
 
-#loading .fa {
-    display: inline-block;
-    margin-bottom: 10px;
-    font-size: 25px;
-}
+#data {
 
-#zone {
-    padding-top: 15px !important;
-}
+    h1 {
+        font-family: $title-font;
+        font-weight: 400;
+        font-size: 30px;
+        margin: 0;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
 
-#zone-header {
-    color: #fff;
-    display: block;
-    font-size: 16px;
-}
+    h2 {
+        font-family: $title-font;
+        font-weight: 400;
+        font-size: 20px;
+        margin: 0;
+        color: $accent-text;
+    }
 
-#zone-name {
-    color: #d5d5d3;
-    display: block;
-    font-size: 100%;
-    margin-bottom: 5px;
-}
+    #tzwarning {
+        font-size: 16px;
+        color: $warning-color;
+        border: 2px solid $warning-color;
+        margin: 10px 0 10px 0;
+        padding: 6px 10px 8px;
+        border-radius: 6px;
+        text-align: center;
+        text-transform: uppercase;
+        cursor: pointer;
+        &:hover {
+            color: $primary-text;
+            border-color: $primary-text;
+        }
+    }
 
-#zone-link {
-    font-size: 22px;
-    float: right;
-    color: #a1a29e;
-}
+    #sun, #moon, #zone {
+        margin-top: 7px;
+        padding-top: 7px;
+        border-top: 1px solid $divider-color;
+    }
 
-#zone-link:hover {
-    color: #fff;
-}
+    #sun-image, #moon-image {
+        height: 100px;
+        width: 100px;
+        float: left;
+        margin-right: 15px;
+        margin-top: 2px;
+        margin-bottom: 15px;
+        @media(max-width: $width-tiny) {
+            width: 80px !important;
+            height: 80px !important;
+        }
+    }
 
-a.pdf {
-    display: block;
-    float: left;
-    margin: 10px 0;
+    .row-special {
+        padding-top: 23px;
+        font-size: 150%;
+    }
+
+    .row {
+        font-size: 18px;
+        margin-top: 5px;
+
+        .label {
+            color: $accent-text;
+            display: block;
+            width: 65px;
+            padding-top: 7px;
+            float: left;
+        }
+
+        .value {
+            font-size: 25px;
+            color: $primary-text;
+        }
+
+        .zone {
+            color: $secondary-text;
+        }
+    }
+
+    #phase {
+        .label {
+            padding-top: 6px;
+        }
+
+        .value {
+            font-size: 18px;
+            padding-top: 6px;
+            display: inline-block;
+        }
+    }
+
+    #zone {
+        padding-top: 15px !important;
+
+        #zone-header {
+            color: #fff;
+            display: block;
+            font-size: 16px;
+        }
+
+        #zone-name {
+            color: #d5d5d3;
+            display: block;
+            font-size: 100%;
+            margin-bottom: 5px;
+        }
+
+        #zone-link {
+            font-size: 22px;
+            float: right;
+            color: #a1a29e;
+            &:hover {
+                color: #fff;
+            }
+        }
+    }
+
+    &.loading .row .value, &.loading .row .zone, &.loading .row-special, &.loading #zone {
+        opacity: 0.3;
+    }
+
+    a.pdf {
+        display: block;
+        float: left;
+        margin: 10px 0;
+    }
+
 }
